# Pong-Game-SDL2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Pong-Game-SDL2/: CMakeLists.txt  main.cpp
include/: Ball.hpp  BallRenderer.hpp  Circle.hpp  CollisionManager.hpp  Entity.hpp  Game.hpp  ICircleRenderer.hpp  IMoveableY.hpp  IRectangleRenderer.hpp  IRenderer.hpp  Paddle.hpp  PaddleRenderer.hpp  Rect.hpp  VerticalMoveable.hpp  main.hpp
src/: Ball.cpp  BallRenderer.cpp  CMakeLists.txt  CollisionManager.cpp  Game.cpp  Paddle.cpp  PaddleRenderer.cpp  VerticalMoveable.cpp  main.cpp
